--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             Dasmoto's Arts & Crafts
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../resourses/style.css" rel="stylesheet">
+        <link href="./resourses/style.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -18,7 +18,7 @@
                 <h2>
                     Brushes
                 </h2>
-                <img src="../resourses/hacksaw.jpg" alt="hacksaw brushes on a table">
+                <img src="./resourses/hacksaw.jpg" alt="hacksaw brushes on a table">
                 <h3>
                     Hacksaw Brushes
                 </h3>
@@ -30,7 +30,7 @@
                 <h2>
                     Frames
                 </h2>
-                <img src="../resourses/frames.jpg" alt="frames">
+                <img src="./resourses/frames.jpg" alt="frames">
                 <h3>
                     Art Frames (assorted)
                 </h3>
@@ -42,7 +42,7 @@
                 <h2>
                     Paint
                 </h2>
-                <img src="../resourses/finnish.jpeg" alt="finnish finish">
+                <img src="./resourses/finnish.jpeg" alt="finnish finish">
                 <h3>
                     Clean Finnish Paint
                 </h3>
